--- a/module.conf
+++ b/module.conf
@@ -11,6 +11,10 @@
             "name": "mini-event",
             "location": "../dep/mini-event/1.0.0/src",
             "main": "main"
+        },
+        {
+            "name": "test",
+            "location": "../test/spec"
         }
     ]
 }
