--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
     "name": "promise",
-    "version": "0.0.1",
+    "version": "0.8.0",
     "description": "A promise respecting ES standard with plenty of handy extensions",
     "main": "promise.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
+    "dependencies": {},
+    "author": "otakustay@gmail.com",
+    "homepage": "https://github.com/ecomfe/promise",
+    "repository": "https://github.com/ecomfe/promise",
+    "license": "BSD",
+    "readme": "README.md",
     "edp": {
         "wwwroot": "/",
         "depDir": "dep",
@@ -16,10 +19,5 @@
             "mini-event": "1.x",
             "eoo": "0.x"
         }
-    },
-    "dependencies": {},
-    "author": "otakustay@gmail.com",
-    "repository": "empty",
-    "license": "BSD",
-    "readme": "README"
+    }
 }
