增加测试用例

--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
-    "name": "promise",
-    "version": "1.0.0",
-    "description": "A promise respecting ES standard with plenty of handy extensions",
-    "main": "Promise.js",
-    "author": "d_xinxin@163.com",
-    "homepage": "https://github.com/ecomfe/promise",
-    "repository": "https://github.com/ecomfe/promise",
-    "license": "BSD",
-    "readme": "README.md",
-    "edp": {
-        "wwwroot": "/",
-        "depDir": "dep",
-        "srcDir": "src",
-        "loaderAutoConfig": "js,htm,html,tpl,vm,phtml",
-        "loaderUrl": "http://s1.bdstatic.com/r/www/cache/ecom/esl/1-8-2/esl.js",
-        "dependencies": {
-            "mini-event": "1.x",
-            "eoo": "0.x",
-            "esl": "1.x"
-        }
-    },
-    "devDependencies": {
-        "promises-aplus-tests": "^2.0.4"
+  "name": "promise",
+  "version": "1.0.0",
+  "description": "A promise respecting ES standard with plenty of handy extensions",
+  "main": "Promise.js",
+  "author": "d_xinxin@163.com",
+  "homepage": "https://github.com/ecomfe/promise",
+  "repository": "https://github.com/ecomfe/promise",
+  "license": "BSD",
+  "readme": "README.md",
+  "scripts": {
+      "test": "node test/run.js"
+  },
+  "edp": {
+    "wwwroot": "/",
+    "depDir": "dep",
+    "srcDir": "src",
+    "loaderAutoConfig": "js,htm,html,tpl,vm,phtml",
+    "loaderUrl": "http://s1.bdstatic.com/r/www/cache/ecom/esl/1-8-2/esl.js",
+    "dependencies": {
+      "mini-event": "1.x",
+      "esl": "1.x"
     }
+  },
+  "devDependencies": {
+    "mocha": "^1.21.4",
+    "promises-aplus-tests": "^2.0.4",
+    "sinon": "^1.10.3",
+    "underscore": "^1.6.0"
+  }
 }
