--- a/package.json
+++ b/package.json
@@ -16,11 +16,7 @@
     "depDir": "dep",
     "srcDir": "src",
     "loaderAutoConfig": "js,htm,html,tpl,vm,phtml",
-    "loaderUrl": "http://s1.bdstatic.com/r/www/cache/ecom/esl/1-8-2/esl.js",
-    "dependencies": {
-      "mini-event": "1.x",
-      "esl": "1.x"
-    }
+    "loaderUrl": "http://s1.bdstatic.com/r/www/cache/ecom/esl/1-8-2/esl.js"
   },
   "devDependencies": {
     "mocha": "^1.21.4",
